# src/BeautifyBaltics.Core.API/Application/Master/Commands/CreateMasterJob/CreateMasterJobEventHandler.cs
@@ -1,10 +1,7 @@
-using System.Text.Json;
 using BeautifyBaltics.Domain.Aggregates.Master;
-using BeautifyBaltics.Domain.Aggregates.Master.Changesets;
 using BeautifyBaltics.Domain.Aggregates.Master.Events;
 using BeautifyBaltics.Domain.Exceptions;
 using BeautifyBaltics.Persistence.Repositories.Job;
-using JasperFx.Core;
 using Wolverine;
 using Wolverine.Marten;
 
@@ -20,8 +17,8 @@ public class CreateMasterJobEventHandler(IJobRepository jobRepository)
         var jobDefinition = await jobRepository.GetByIdAsync(request.Job.JobId, cancellationToken)
                             ?? throw NotFoundException.For<Domain.Documents.Job>(request.Job.JobId);
 
-        var change = new MasterJobCreateChangeProposed(
-            MasterJobId: CombGuidIdGeneration.NewGuid(),
+        var draftCreated = new MasterJobDraftCreated(
+            MasterId: master.Id,
             JobId: request.Job.JobId,
             Price: request.Job.Price,
             Duration: TimeSpan.FromMinutes(request.Job.DurationMinutes),
@@ -31,14 +28,6 @@ public class CreateMasterJobEventHandler(IJobRepository jobRepository)
             JobName: jobDefinition.Name
         );
 
-        var proposed = new MasterChangeProposed
-        {
-            AggregateId = master.Id,
-            ProposedById = master.UserId,
-            Type = typeof(MasterJobCreateChangeProposed).FullName!,
-            ProposedChange = JsonSerializer.SerializeToElement(change),
-        };
-
-        return ([proposed], [new CreateMasterJobResponse(request.MasterId, change.MasterJobId)]);
+        return ([draftCreated], [new CreateMasterJobResponse(request.MasterId, draftCreated.MasterJobId)]);
     }
 }
