# src/BeautifyBaltics.Core.API/Application/Master/Commands/UpdateMasterJob/UpdateMasterJobEventHandler.cs
@@ -2,11 +2,11 @@ using System.Text.Json;
 using BeautifyBaltics.Domain.Aggregates.Master;
 using BeautifyBaltics.Domain.Aggregates.Master.Changesets;
 using BeautifyBaltics.Domain.Aggregates.Master.Events;
+using BeautifyBaltics.Domain.Enumerations;
 using BeautifyBaltics.Domain.Exceptions;
 using BeautifyBaltics.Persistence.Repositories.Job;
 using Wolverine;
 using Wolverine.Marten;
-using static BeautifyBaltics.Domain.Aggregates.Master.MasterAggregate;
 
 namespace BeautifyBaltics.Core.API.Application.Master.Commands.UpdateMasterJob;
 
@@ -17,11 +17,31 @@ public class UpdateMasterJobEventHandler(IJobRepository jobRepository)
     {
         if (master == null) throw NotFoundException.For<MasterAggregate>(request.MasterId);
 
-        _ = master.Jobs.SingleOrDefault(j => j.MasterJobId == request.MasterJobId)
-            ?? throw NotFoundException.For<MasterJob>(request.MasterJobId);
+        var job = master.GetJobOrThrow(request.MasterJobId);
+
+        if (job.Status == MasterJobStatus.PendingReview)
+        {
+            throw DomainException.WithMessage("Cannot update a job while it is pending review.");
+        }    
 
         var jobDefinition = await jobRepository.GetByIdAsync(request.Job.JobId, cancellationToken)
                             ?? throw NotFoundException.For<Domain.Documents.Job>(request.Job.JobId);
+
+        if (job.Status == MasterJobStatus.Draft)
+        {
+            var directEvent = new MasterJobUpdated(
+                MasterJobId: job.MasterJobId,
+                MasterId: master.Id,
+                JobId: request.Job.JobId,
+                Price: request.Job.Price,
+                Duration: TimeSpan.FromMinutes(request.Job.DurationMinutes),
+                Title: request.Job.Title,
+                JobCategoryId: jobDefinition.CategoryId,
+                JobCategoryName: jobDefinition.CategoryName,
+                JobName: jobDefinition.Name
+            );
+            return ([directEvent], [new UpdateMasterJobResponse(request.MasterId, request.MasterJobId)]);
+        }
 
         var change = new MasterJobUpdateChangeProposed(
             MasterJobId: request.MasterJobId,
